<resources>
    <string name="app_name" translatable="false">Timezone Updater</string>
    <string name="app_version">version %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_donate">Donate</string>
    <string name="action_forum">Discussions</string>
    <string name="action_doc">Documentation</string>
    <string name="action_issues">Issues</string>
    <string name="action_source">Source code</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="checkbox_tzdata">Time zones data</string>
    <string name="checkbox_icu">ICU data</string>
    <string name="start_button">UPDATE</string>

    <string name="gui_preferences">Interface</string>
    <string name="title_language">Language</string>
    <string name="dialog_title_language">Choose language</string>
    <string name="title_theme">Theme</string>
    <string name="dialog_title_theme">Choose theme</string>
    <string name="title_fontsize">Font size</string>
    <string name="dialog_title_fontsize">Font size</string>
    <string name="title_maxlines">Scroll size</string>
    <string name="dialog_title_maxlines">Scroll size</string>
    <string name="title_timestamp">Timestamp</string>
    <string name="summary_timestamp">Show timestamp</string>
    <string name="title_confirm_dialog">Update</string>
    <string name="message_confirm_dialog">Start a time zones update?</string>
    <string name="debug_preferences">Debug</string>
    <string name="title_debug">Debug mode</string>
    <string name="summary_debug">Show debugging information</string>
    <string name="title_trace">Trace mode</string>
    <string name="summary_trace">Enable tracing mode</string>
    <string name="title_logger">Logging</string>
    <string name="summary_logger">Save logs to a file</string>
    <string name="title_logfile">Log file</string>
    <string name="dialog_title_logfile">Log file</string>
    <string name="help_text"><b>Help</b>\n\nThis app downloads and updates a time zones to latest version on your device.\n\nProcedure:\n1. Get superuser privileges (root).\n2. Install <a href="https://play.google.com/store/apps/details?id=ru.meefik.busybox">BusyBox</a>.\n3. Check the connection to Internet.\n4. Tap UPDATE button.\n5. Restart the device.\n\n</string>
    <string name="tzversion_text">Current time zone:\n%1$s, version %2$s\n</string>
    <string name="about_text">This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.\n\nLicensed under the GPL version 3 or later.\n\n&#169; 2015 <a href="http://meefik.ru">Anton Skshidlevsky</a></string>

    <string-array name="language_entries" translatable="false">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="language_values" translatable="false">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="theme_entries">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="theme_values" translatable="false">
        <item>dark</item>
        <item>light</item>
    </string-array>
</resources>
