<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_more"
        android:icon="?attr/ic_action_more"
        android:orderInCategory="100"
        android:title="@string/action_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_help"
                android:orderInCategory="100"
                android:title="@string/action_help"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_about"
                android:orderInCategory="100"
                android:title="@string/action_about"
                app:showAsAction="never" />

        </menu>
    </item>

</menu>
